# aster

./: .gitignore  Aster.cpp  Aster.h  CMakeLists.txt  GLTexture.h  IOManager.cpp  ImageLoader.cpp  ImageLoader.h  ResourceManager.cpp  ResourceManager.h  SpriteKit.cpp  SpriteKit.h  TextureCache.cpp  TextureCache.h  Thanos.cpp  Thanos.h  Vertex.h  glslProgram.cpp  glslProgram.h  main.cpp  picopng.cpp
Thanos/: CMakeLists.txt  Camera.cpp  Camera.h  Entities.cpp  Entities.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  IOManager.h  ImageLoader.cpp  ImageLoader.h  Input.cpp  Input.h  InputManager.cpp  InputManager.h  ModelLoader.cpp  ModelLoader.h  ResourceManager.cpp  ResourceManager.h  SpriteBatch.cpp  SpriteBatch.h  SpriteKit.cpp  SpriteKit.h  TextureCache.cpp  TextureCache.h  Thanos.cpp  Thanos.h  Timing.cpp  Timing.h  Vertex.h  Window.cpp  Window.h  WorldGen.cpp  WorldGen.h  cmsipa;l,s  picopng.cpp
cmake/: FindGLEW.cmake  FindSDL2.cmake
shaders/: colorShading.frag  colorShading.vert
world/: tileDef.json
